Module 2 - Read, Generate, Modify Congiruations/attributes.tf
# resource "aws_eip" "lb" {
#   vpc      = true
# }

# output "eip" {
#   value = aws_eip.lb
# }

# resource "aws_s3_bucket" "mys3" {
#   bucket = "demo-bucket-tf-course"
# }

# output "mys3bucket" {
#   value = aws_s3_bucket.mys3
# }
